--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgroChakra - Smart Agricultural Analysis</title>
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="favicon.svg">
+    
     <!-- External Libraries -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -259,13 +264,13 @@
 
         <!-- Decision Action Buttons -->
         <div class="decision-action-container">
-            <button id="fertilizerActionBtn" class="decision-action-btn fertilizer-btn" title="Fertilization Decision">
+            <button id="fertilizerActionBtn" class="decision-action-btn fertilizer-btn" title="Fertilization">
                 <i class="fas fa-flask"></i>
-                <span class="btn-text">Fertilization Decision</span>
+                <span class="btn-text">Fertilization</span>
             </button>
-            <button id="irrigationActionBtn" class="decision-action-btn irrigation-btn" title="Irrigation Decision">
+            <button id="irrigationActionBtn" class="decision-action-btn irrigation-btn" title="Irrigation">
                 <i class="fas fa-tint"></i>
-                <span class="btn-text">Irrigation Decision</span>
+                <span class="btn-text">Irrigation</span>
             </button>
         </div>
     </div>
